# BGX

./: LICENSE  README.md
BGXPlatform/: README.md  docker-compose-bgx-pbft.yaml  docker-compose-installed-bgx.yaml
BGXPlatform/API/: README.md  startup_global_state.json
BGXPlatform/API/rest_api/: Dockerfile
BGXPlatform/DAG/: services.py
BGXPlatform/data-bgx/data/: readme
BGXPlatform/data-bgx/etc/: cli.toml  log_config.toml  validator.toml
BGXPlatform/data-bgx/keys/: readme  validator.priv  validator.pub
BGXPlatform/data-bgx/logs/: readme
BGXPlatform/data-bgx/policy/: readme
BGXPlatform/rest_api/: rest-api.vpj
Contracts/: BGXCrowdsale-ABI.txt  BGXToken-ABI.txt  BGXToken_Draft.sol  DECAirdrop_Solidity.txt  DEC_Solidity.txt
LIBS/: foo.txt
LIBS/API/: docker-compose.yaml
LIBS/BGXNode/: build-alpha-6.bat  build.xml  build_ru.txt  foo.txt
LIBS/DAG/: emission.py
LIBS/DAGProcessing/: CMakeLists.txt  Makefile  allprint.c  allprint.h  clusters.c  clusters.h  dag.c  dag.h  dfwalk.c  dxatom.c  dxatom.h  dxgraphserv.c  dxgraphserv.h  dxheap.c  dxheap.h  dxlist.c  dxlist.h  dxmyltiarr.c  dxmyltiarr.h  dxqueue.c  dxqueue.h  dxstack.c  dxstack.h  dxvector.c  dxvector.h  foo.txt  graphclass.c  graphclass.h  graphfromrel.c  graphfromrel.h  preprocess.c  preprocess.h  preprocesscross.c  preprocesscross.h  preprocesstree.c  preprocesstree.h  propogator.c  propogator.h  protoio.c  protoio.h  (+12 more)
LIBS/NTRLab/: DAG.py
MOBILAPP/: foo.txt  readme.md
MOBILAPP/libraries/: Email.php
Platform/bgx/: .env  .gitignore  BUILD-BGX.md  BUILD.md  DASHBOARD.md  README.md
(+1451 files in other folders)
